# ChangeLog for dev-python/urllib3
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/urllib3/ChangeLog,v 1.35 2015/03/21 08:52:17 jer Exp $

  21 Mar 2015; Jeroen Roovers <jer@gentoo.org> urllib3-1.9.1.ebuild:
  Stable for HPPA (bug #540290).

*urllib3-1.10.1 (17 Mar 2015)

  17 Mar 2015; Patrick Lauer <patrick@gentoo.org> +urllib3-1.10.1.ebuild:
  Bump

  10 Mar 2015; Ian Delaney <idella4@gentoo.org> urllib3-1.10.ebuild,
  urllib3-1.9.1.ebuild:
  add dep to DEPEND

  09 Mar 2015; Pacho Ramos <pacho@gentoo.org> urllib3-1.9.1.ebuild:
  x86 stable, bug 540290

  07 Mar 2015; Pacho Ramos <pacho@gentoo.org> urllib3-1.9.1.ebuild:
  ppc stable, bug 540290

  07 Mar 2015; Pacho Ramos <pacho@gentoo.org> urllib3-1.9.1.ebuild:
  ppc64 stable, bug 540290

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> urllib3-1.9.1.ebuild:
  amd64 stable, bug 540290

*urllib3-1.10 (27 Dec 2014)

  27 Dec 2014; Ian Delaney <idella4@gentoo.org> +urllib3-1.10.ebuild,
  -urllib3-1.8.3.ebuild, -urllib3-1.9.ebuild:
  bump; update and re-include pypy test phase, upstream bug cited for known
  suspect tests, rm old

  22 Oct 2014; Jeroen Roovers <jer@gentoo.org> urllib3-1.9.1.ebuild:
  Marked ~hppa (bug #525246).

  15 Oct 2014; Anthony G. Basile <blueness@gentoo.org> urllib3-1.8.3.ebuild,
  urllib3-1.9.1.ebuild, urllib3-1.9.ebuild:
  Keyworded ~ppc and ~ppc64, bug #525246

  13 Oct 2014; Ian Delaney <idella4@gentoo.org> -urllib3-1.5-r1.ebuild,
  -urllib3-1.5.ebuild, -urllib3-1.7.1.ebuild, -urllib3-1.7.ebuild:
  rm more old

*urllib3-1.9.1 (13 Oct 2014)

  13 Oct 2014; Ian Delaney <idella4@gentoo.org> +urllib3-1.9.1.ebuild,
  -urllib3-1.6.ebuild, -urllib3-1.8-r1.ebuild, -urllib3-1.8.2.ebuild,
  urllib3-1.9.ebuild:
  bump; add py3.4, IUSE doc & doc build, update deps, test phase, rm old

*urllib3-1.9 (16 Jul 2014)

  16 Jul 2014; Ian Delaney <idella4@gentoo.org> +urllib3-1.9.ebuild: